--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p class="text top_text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt  ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt.</p>
         <a href="#contact" class="button">Contact Us</a>
         </div>
-        <video controls src="video/video.mp4" class="top_video"></video>
+        <video controls src="video/Video.mp4" class="top_video"></video>
     </div>
     </section>
     <section class="service center">
